--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 p, h1, h2, h3, h4, h5, h6, ul {
   margin: 0;
   padding: 0;
@@ -15,15 +17,86 @@ li {
   list-style: none;
 }
 
-/* ************************************** */
+body {
+  font-family: "Poppins", sans-serif;
+}
 
+.destination {
+  text-align: center;
+}
+.destination h2 {
+  font-family: "Satisfy", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 17px;
+  color: rgb(227, 3, 46);
+  text-transform: capitalize;
+}
+.destination h3 {
+  font-size: 34px;
+  font-weight: 500;
+  font-style: normal;
+  text-transform: capitalize;
+  margin: 20px 0;
+  position: relative;
+}
+.destination h3::after {
+  content: " ";
+  position: absolute;
+  top: 130%;
+  left: calc(50% - 20px);
+  width: 40px;
+  height: 2px;
+  background-color: rgb(227, 3, 46);
+}
+.destination p {
+  font-size: 17px;
+  font-weight: 400;
+  color: #777777;
+  line-height: 1.7;
+}
+.destination .destination_images {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 40px;
+  column-gap: 20px;
+  perspective: 1000px;
+}
+.destination .destination_images .dest_img {
+  position: relative;
+  border-radius: 12px;
+  overflow: hidden;
+  transition: transform 0.1s; /* Smooth transition for the rotation */
+  transform-style: preserve-3d;
+}
+.destination .destination_images .dest_img .dest_txt {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 0);
+  color: #f7f7f7;
+  text-transform: capitalize;
+  font-family: "Satisfy", cursive;
+  font-weight: 400;
+  font-style: italic;
+  background-color: rgba(122, 122, 122, 0.7215686275);
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0px 0px 12px 12px;
+}
+.destination .destination_images .dest_img:hover img {
+  opacity: 0.82;
+  filter: brightness(100%) contrast(120%) saturate(110%) blur(0px) hue-rotate(0deg);
+}
 
-
-
-
-
-
-
+.container {
+  max-width: 1192px !important;
+}
 
 @media (min-width: 1200px) {
   .container {
