--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,13 +1,89 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 p,h1,h2,h3,h4,h5,h6,ul{margin: 0;padding: 0;}
 a:hover{text-decoration: none;}
 a{text-decoration: none;}
 li{list-style: none;}
 
+body {
+    font-family: "Poppins", sans-serif;
+}
 
 // destination area start
-
+.destination {
+    text-align: center;
+    h2 {
+        font-family: "Satisfy", cursive;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 17px;
+        color: rgb(227, 3, 46);
+        text-transform: capitalize;
+    }
+    h3 {
+        font-size: 34px;
+        
+        font-weight: 500;
+        font-style: normal;
+        text-transform: capitalize;
+        margin: 20px 0;
+        position: relative;
+        &::after {
+            content: " ";
+            position: absolute;
+            top: 130%;
+            left: calc(50% - 20px);
+            width: 40px;
+            height: 2px;
+            background-color: rgb(227, 3, 46);
+        }
+    }
+    p {
+        font-size: 17px;
+        font-weight: 400;
+        color: #777777;
+        line-height: 1.7;
+    }
+    .destination_images {
+        margin-top: 30px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 40px;
+        column-gap: 20px;
+        perspective: 1000px;
+        .dest_img {
+            position: relative;
+            border-radius: 12px;
+            overflow: hidden;
+            transition: transform 0.1s; /* Smooth transition for the rotation */
+            transform-style: preserve-3d;
+            .dest_txt {
+                position: absolute;
+                left: 50%;
+                bottom: 0;
+                transform: translate(-50%, 0);
+                color: #f7f7f7;
+                text-transform: capitalize;
+                font-family: "Satisfy", cursive;
+                font-weight: 400;
+                font-style: italic;
+                background-color: #7A7A7AB8;
+                width: 100%;
+                height: 40px;
+                line-height: 40px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 0px 0px 12px 12px;
+            }
+            &:hover img {
+                opacity: 0.82;
+                filter: brightness(100%) contrast(120%) saturate(110%) blur(0px) hue-rotate(0deg);
+            }
+        }
+    }
+}
 
 
 
@@ -18,7 +94,9 @@ li{list-style: none;}
 
 
 // destination area end 
-
+.container {
+    max-width: 1192px !important;
+}
 @media (min-width: 1200px){
 
     .container{
