--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,9 +25,11 @@ li {
   display: flex;
   justify-content: space-between;
   font-size: 14px; 
-  padding: 10px 25px 10px 25px;   
+  /* padding: 10px 25px 10px 25px;    */
 }
 .Top-bar .Top-first{
+  height: 40px;
+  align-items: center ;
   display: flex;
   justify-content: space-between;
 }
@@ -42,7 +44,7 @@ li {
   font-weight: 650;
 }
 .Top-bar .Top-first .Top-first-left li {
-  position: relative;
+  
   border-right: 1px solid white;
 }
 .Top-bar .Top-first .Top-first-left li i{
@@ -60,8 +62,160 @@ li {
 .Top-bar .Top-first .Top-first-left li a:hover span {
   color: #c00b25;
 }
+.Top-bar .Top-first .Top-first-left a{
+  color: white;
+  padding-right: 8px;
 
 
+  
+}
+
+.Top-bar .Top-first .Top-first-right    {
+  display: flex;
+  gap: 5px;
+
+}
+.Top-bar .Top-first .Top-first-right a{
+background: #c00b25;
+    padding: 3px 5px 3px 5px;
+    color: white;
+    font-size: 12px;
+}
+
+.Top-bar .Top-first .Top-first-right a:hover{
+  background-color: #970518 !important;
+  color: rgb(240, 240, 240);
+}
+
+
+
+.header{
+  z-index: 2;
+  background-color: white;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.header-content{
+  height: 90px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+}
+.header-left{
+  width: 20%;
+}
+.header-right li{
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.header-right{
+  display: flex;
+  width: 80%;
+ justify-content: center;
+  font-weight: 500;
+  
+  align-items: center;
+}
+.header-right li a{
+  font-size: 16px;
+}
+.header-right li a:hover{
+  color: #c00b25;
+}
+#menu li a.active{
+color: #c00b25;
+}
+.header-right li{
+  position: relative;
+}
+.header-right li a{
+  color: black;
+}
+
+.dropdown{
+  position: fixed;
+  display: flex;
+  transition: 0.3s;
+  flex-direction: column;
+  background: #f7f7f7;
+  top: 22%;
+  left: 0;
+  padding: 40px;
+  width: 100vw;
+  visibility: hidden;
+  z-index: 9;
+}
+.header-right li:hover .dropdown{
+  visibility: visible;
+}
+.dropdown h2{
+  text-align: center;
+  font-size: 24px;
+  position: relative;  
+}
+.dropdown h2::after {
+  content: '';
+  background: rgb(277, 3, 46);
+    width: 120px;
+    display: inline-block;
+    height: 2px;
+    position: absolute;
+    bottom: -17px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.cards{
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  margin-top: 40px;
+}
+
+.cards .img-p img{
+  border-radius: 20px;
+  
+}
+.cards .img-p{
+ 
+   margin-right: 15px;
+}
+.cards .img-p p{
+  font-size: 14px;
+ font-weight: 700;
+  padding-top: 15px;
+  text-align: center;
+}
+.dropdown2{
+  position: absolute;
+  display: flex;
+  transition: 0.3s;
+  flex-direction: column;
+  background: #f7f7f7;
+  top: 22%;
+  left: 0;
+  box-shadow: 0 10px 30px 0 rgba(45, 45, 45, .2);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 200px !important;
+  border: 1px solid #dadada;
+
+  visibility: hidden;
+  z-index: 9;
+  top: 135%;
+}
+
+.dropdown2 ul li a{
+  font-weight: 400;
+    font-size: 14px;
+}
+.header-right li:hover .dropdown2{
+  visibility: visible;
+
+}
+/* ************************************************************************** */
 
 .destination {
   text-align: center;
@@ -143,68 +297,7 @@ li {
 
 
 
-.Top-bar .Top-first .Top-first-left a{
-  color: white;
-  padding-right: 8px;
 
-
-  
-}
-
-.Top-bar .Top-first .Top-first-right    {
-  display: flex;
-  gap: 5px;
-
-}
-.Top-bar .Top-first .Top-first-right a{
-background: #c00b25;
-    padding: 3px 5px 3px 5px;
-    color: white;
-    font-size: 12px;
-}
-
-.Top-bar .Top-first .Top-first-right a:hover{
-  background-color: #970518 !important;
-  color: rgb(240, 240, 240);
-}
-
-
-
-
-.container-fluid{
-  border-bottom: 1px solid black;
-}
-.header{
-  z-index: 2;
-  background-color: white;
-}
-.header-content{
-  height: 90px;
-  display: flex;
-  align-items: center;
-  padding: 15px;
-}
-.header-left{
-  width: 20%;
-}
-.header-right li{
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.header-right{
-  display: flex;
-  width: 80%;
- justify-content: center;
-  font-weight: 500;
-  font-size: 15px;
-  align-items: center;
-}
-.header-right > li{
-  position: relative;
-}
-.header-right li a{
-  color: black;
-}
 @media (min-width: 1200px) {
   .container {
     max-width: 1170px;
