--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -41,7 +41,7 @@ body {
     }
     p {
         font-size: 17px;
-        font-weight: 400;
+        font-weight: 500;
         color: #777777;
         line-height: 1.7;
     }
@@ -85,7 +85,46 @@ body {
     }
 }
 
-
+.services {
+    padding: 100px 0;
+    .ser {
+        display: flex;
+        align-items: center;
+        gap: 50px;
+        .ser_img {
+            transform: translate3d(0px, 0px, 0px);
+            transition: transform 0.5s ease;
+            width: 50%;
+        }
+        .ser_txt {
+            width: 50%;
+            transform: translate3d(0px, 0px, 0px);
+            transition: transform 0.5s ease;
+            h2 {
+                font-size: 45px;
+                font-weight: 400;
+                text-transform: uppercase;
+            }
+            p {
+                font-size: 17px;
+                color: #777777;
+                margin: 20px 0;
+            }
+            a {
+                color: #fff;
+                background-color: rgb(227, 3, 46);
+                padding: 5px 20px;
+                font-size: 13px;
+                text-transform: uppercase;
+                font-weight: 600;
+                border-radius: 5px;
+                min-height: 42px;
+                display: inline-block;
+                line-height: 42px;
+            }
+        }
+    }
+}
 
 
 
