--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -221,6 +221,269 @@ color: #c00b25;
 
 }
 /* ************************************************************************** */
+.blog{
+  background-color: #f7f7f7;
+}
+.blog h3 {
+  padding-top: 20px;
+  font-size: 34px;
+  text-align: center;
+  font-weight: 500;
+  font-style: normal;
+  text-transform: capitalize;
+  margin: 20px 0;
+  position: relative;
+}
+.blog h3::after {
+  content: '';
+  background: rgb(277, 3, 46);
+    width: 120px;
+    display: inline-block;
+    height: 2px;
+    position: absolute;
+    bottom: -17px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.blog p {
+  padding: 20px 0px;
+  font-size: 17px;
+  text-align: center;
+  font-weight: 500;
+  color: #777777;
+  line-height: 1.7;
+}
+.blog .news-media{
+  padding: 0px 35px;
+  display: flex;
+  align-items: center;
+}
+.blog .news-media .news-content{
+  background-color: white;
+  height: fit-content;
+  padding: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+ margin-left: -15px;
+ z-index: 1;
+  
+}
+
+.blog .news-media .news-content h3{
+  margin-top: -18px;
+}
+.blog .news-media .news-content h3 a{
+  color: #c00b25;
+ font-weight: 500;
+  font-size: 23px;
+}
+.blog .news-media .news-content h3 a:hover{
+  color: #780D10;
+}
+.blog .news-media .news-content h3::after {
+  content: none ;
+}
+.blog .news-media .news-content .icons{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin: -30px 0px;
+  
+}
+.blog .news-media .news-content .icons p, i, a{
+  color: #c5c5c5;
+}
+.blog .news-media .news-content .icons i:hover, a:hover{
+  color: #777777;
+}
+.blog .news-media .news-content .news-btn2{
+  text-align: center;
+  margin-top: -10px;
+  
+}
+.blog .news-media .news-content .news-btn1{
+  text-align: center;
+  
+  background-color: #e3032e;
+  padding: 2px 8px;
+  width: fit-content;
+  margin: auto;
+  margin-top: -22px;
+}
+.blog .news-media .news-content .news-btn1 a{
+  color: white;
+ 
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.blog .news-media .news-content .news-btn1 a:hover{
+  color: #f7b7c3;
+}
+.blog .news-media .news-content .news-btn2 a{
+  color: #e93d5e;
+  font-weight: 800;
+    font-size: 13px;
+    text-transform: uppercase;
+}
+.blog .news-media .news-content .news-btn2 a {
+  position: relative;
+  display: inline-block; 
+}
+.blog .news-media .news-content .news-btn2 a::after{
+  content: '';
+  position: absolute;
+  right: -15%;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+.blog .news-media .news-content .news-btn2 a:hover::after{
+  content: '. . .';
+  opacity: 1;
+}
+.blog .news-media .blog-img{
+  position: relative;
+}
+.blog .news-media .blog-img .news-date{
+  background-color: white;
+  position: absolute;
+  top: 3%;
+  left: 3%;
+  width: 50px;
+  
+}
+.blog .news-media .blog-img .news-date h4{
+  padding: 6px 6px 0px 6px;
+text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+}
+.blog .news-media .blog-img .news-date p{
+  font-weight: 600;
+  font-size: 12px;
+  color: black;
+  margin-top: -20px;
+}
+
+
+
+
+
+
+.blog .travel{
+  display: flex;
+  align-items: center;
+  padding: 35px;
+}
+.RR{
+  flex-direction: row-reverse;
+}
+.blog .travel .travel-content{
+  background-color: white;
+    height: fit-content;
+    padding: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    margin-right: -15px;
+    z-index: 1;
+}
+.blog .travel .travel-content .travel-btn1 {
+  text-align: center;
+  background-color: #e3032e;
+  padding: 2px 8px;
+  width: fit-content;
+  margin: auto;
+  margin-top: -22px;
+}
+.blog .travel .travel-content .travel-btn1 a{
+  color: white;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.blog .travel .travel-content .travel-btn1 a:hover {
+  color: #f7b7c3;
+}
+.blog .travel .travel-content h3{
+  
+    margin-top: -18px;
+
+}
+.blog .travel .travel-content h3 a{
+  color: #c00b25;
+    font-weight: 500;
+    font-size: 23px;
+}
+.blog .travel .travel-content h3 a:hover{
+  color: #780D10;
+}
+
+.blog .travel .travel-content h3::after {
+  content: none ;
+}
+.blog .travel .travel-content .icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin: -30px 0px;
+}
+.blog .travel .travel-content .icons i:hover, a:hover{
+  color: #777777;
+}
+.blog .travel .travel-content .travel-btn2{
+ 
+    text-align: center;
+    margin-top: -10px;
+
+}
+.blog .travel .travel-content .travel-btn2 a {
+  color: #e93d5e;
+  font-weight: 800;
+  font-size: 13px;
+  text-transform: uppercase;
+  position: relative;
+  display: inline-block; 
+}
+
+.blog .travel .travel-content .travel-btn2 a::after{
+  content: '';
+  position: absolute;
+  right: -15%;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+.blog .travel .travel-content .travel-btn2 a:hover::after{
+  content: '. . .';
+  opacity: 1;
+}
+.travel .travel-img{
+  position: relative;
+}
+.blog .travel .travel-date{
+  background-color: white;
+  position: absolute;
+  top: 3%;
+  right: 3%;
+  width: 50px;
+  
+}
+.blog .travel .travel-date h4{
+  padding: 6px 6px 0px 6px;
+text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+}
+.blog .travel .travel-date p{
+  font-weight: 600;
+  font-size: 12px;
+  color: black;
+  margin-top: -20px;
+}
+/* ************************************************************************** */
 
 .destination {
   text-align: center;
@@ -332,7 +595,7 @@ color: #c00b25;
   z-index: -9;
 }
 .services .ser .ser_txt {
-  margin-left: 30px;
+  margin-left: 30px !important;
   width: 50%;
   transform: translate3d(0px, 0px, 0px);
   transition: transform 0.5s ease;
