--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,7 +95,7 @@ background: #c00b25;
 
 
 .header{
-  z-index: 2;
+  z-index: 3;
   background-color: white;
 }
 .sticky {
@@ -763,7 +763,7 @@ text-align: center;
 }
 
 .services {
-  padding-top: 100px;
+  padding: 100px 0;
 }
 .services .container-fluid {
   padding: 0 25px;
@@ -799,7 +799,7 @@ text-align: center;
   z-index: -9;
 }
 .services .ser .ser_txt {
-  margin-left: 30px !important;
+  margin-left: 30px;
   width: 50%;
   transform: translate3d(0px, 0px, 0px);
   transition: transform 0.5s ease;
@@ -827,6 +827,115 @@ text-align: center;
   line-height: 42px;
 }
 
+.gallery_main .gallery {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+}
+
+.gallery_main .gallery .gall {
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery_main .gallery .gall a img {
+  width: 225px;
+  height: 225px;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
+.gallery_main .gallery .gall::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  transition: opacity .3s ease;
+}
+
+.gallery_main .gallery .gall:hover::after {
+  opacity: 1;
+}
+
+.gallery_main .gallery .gall .gall_txt {
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: -30px;
+  width: 100%;
+  transition: bottom .3s ease;
+  opacity: 0;
+  visibility: hidden;
+}
+.gallery_main .gallery .gall:hover .gall_txt {
+  bottom: 15px;
+  opacity: 1;
+  visibility: visible;
+}
+
+.gallery_main .gallery .gall .gall_txt li {
+  color: #fff;
+  z-index: 1;
+}
+
+.gallery_main .gallery .gall .gall_txt li i {
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.gallery_main .gallery .gall .gall_txt li span {
+  margin-left: 5px;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.gallery_main .instagram h4 {
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #242424;
+}
+.gallery_main .instagram h5 {
+  color: #c4c4c4;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.gallery_main .instagram a {
+  color: #c00b25;
+  text-transform: capitalize;
+  transition: color .3s ease;
+  font-size: 18px;
+}
+.gallery_main .instagram a:hover {
+  color: #780D10;
+}
+.gallery_main .instagram p {
+  color: #242424;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+.gallery_main {
+  position: relative;
+}
+
+.gallery_main .instagram {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  padding: 30px;
+  max-width: 300px;
+  width: 100%;
+  background: #fff;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.22);
+  text-align: center;
+}
 
 /* *********************************************************************** */
 .main-footer{
@@ -886,13 +995,6 @@ gap: 40px;
 .container {
   max-width: 1192px !important;
 }
-
-
-
-
-
-
-
 
 @media (min-width: 1200px) {
   .container {
