--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -412,11 +412,11 @@ color: rgb(227, 3, 46);
   top: 3%;
   left: 3%;
   width: 50px;
-  
+  padding: 5px 0;
+  z-index: 2;
 }
 .blog .news-media .blog-img .news-date h4{
-  padding: 6px 6px 0px 6px;
-text-align: center;
+  text-align: center;
   font-size: 24px;
   font-weight: 400;
 }
@@ -424,7 +424,7 @@ text-align: center;
   font-weight: 600;
   font-size: 12px;
   color: black;
-  margin-top: -20px;
+  padding: 0;
 }
 
 
@@ -460,6 +460,7 @@ text-align: center;
   opacity: 0;
   transition: opacity 0.3s ease;
   z-index: 1; 
+  pointer-events: none;
 }
 
 .blog-img::after {
@@ -1051,8 +1052,68 @@ text-align: center;
     width: auto;
   }
 }
-@media (max-width: 767.98px) { }
-@media (max-width: 575.98px) { }
+@media (max-width: 767.98px) { 
+  .destination p {
+    font-size: 16px;
+  }
+  .destination .destination_images {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .destination .destination_images .dest_img {
+    width: fit-content;
+    margin: 0 auto;
+  }
+  .services .ser .ser_txt h2 {
+    font-size: 28px;
+  }
+  .services .ser .ser_txt a {
+    line-height: 32px;
+  }
+  .reviews .carousel .carousel-control-prev, .reviews .carousel .carousel-control-next {
+    display: block;
+  }
+  .gallery_main .gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .main-footer {
+    padding: 40px 0px;
+  }
+  .main-footer .container {
+    flex-direction: column;
+  }
+  .main-footer .payment {
+    width: 100%;
+  }
+  .main-footer .offices {
+    margin-left: 0;
+  }
+  .we_offers .offers .offer {
+    flex: 1 1 calc(100%);
+  }
+}
+@media (max-width: 575.98px) { 
+  .destination h3 {
+    font-size: 40px;
+  }
+  .destination h3 {
+    margin: 10px 0 20px 0;
+  }
+  .destination h3::after {
+    top: 110%;
+  }
+  .destination p {
+    font-size: 17px;
+  }
+  .we_offers h3 {
+    font-size: 28px;
+  }
+  .reviews .carousel .carousel-control-prev, .reviews .carousel .carousel-control-next {
+    display: none;
+  }
+  .carousel-indicators {
+    bottom: -40px;
+  }
+}
 
 
 
