--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -430,14 +430,54 @@ color: rgb(227, 3, 46);
 .blog .news-media .news-content h3::after {
   content: none ;
 }
-.blog .news-media .news-content .icons{
+.blog .news-media .news-content .icons {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
   margin: -30px 0px;
-  
 }
+.blog .news-media .news-content .icons div.share {
+  position: relative;
+}
+.blog .news-media .news-content .icons div.share:hover ul.social {
+  opacity: 1;
+  visibility: visible;
+}
+.blog .news-media .news-content .icons div.share ul.social {
+  display: flex;
+  background-color: #000;
+  width: 130px;
+  height: 35px;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: .3s;
+}
+.blog .news-media .news-content .icons div.share ul.social::after {
+  content: '';
+  clip-path: polygon(100% 50%, 50% 100%, 0% 50%);
+  background: #000;
+  width: 20px;
+  height: 25px;
+  position: absolute;
+  bottom: -12px;
+}
+.blog .news-media .news-content .icons div.share ul.social li {
+  margin-right: 8px;
+}
+.blog .news-media .news-content .icons div.share ul.social li:last-child {
+  margin-right: 0;
+}
+.blog .news-media .news-content .icons div.share ul.social li a i {
+  color: #fff;
+}
+
 .blog .news-media .news-content .icons p, i, a{
   color: #c5c5c5;
 }
