--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1169,6 +1169,26 @@ color: rgb(227, 3, 46);
 .display_none {
   display: none !important;
 }
+#goToTopBtn {
+  display: none; 
+  position: fixed; 
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  /* padding: 15px; */
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.17);
+  height: 50px;
+  width: 50px;
+}
+#goToTopBtn i {
+  color: rgb(227, 3, 46);
+}
+
 /* **************************************************************************** */
 
 
