--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1354,6 +1354,7 @@ color: rgb(227, 3, 46);
   }
 }
 @media (max-width: 575.98px) { 
+
   @keyframes slideUp {
     from {
       opacity: 0;
@@ -1405,7 +1406,11 @@ color: rgb(227, 3, 46);
     bottom: -40px;
   }
   .header-left {
-    width: 50%;
+    width: 40%;
+  }
+  .header-content{
+    padding: 0;
+    height: 70px;
   }
 }
 
