--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1188,41 +1188,69 @@ color: rgb(227, 3, 46);
 #goToTopBtn i {
   color: rgb(227, 3, 46);
 }
-.contact_us{
+.contact_us {
   position: fixed;
   z-index: 99;
   right: 0;
   top: 50%;
+  transform: translateY(-50%);
+  border-radius: 10px 0 0 10px;
+  overflow: hidden;
 }
-.contact_us .minimize{
-  background-color: black;
-  width: 40px;
+
+.contact_us li {
+  cursor: pointer;
   padding: 10px;
 }
-.contact_us .contact_page{
-  background-color: #dd3333;
-  
 
+.contact_us .minimize {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.contact_us .contact_page span{
+
+.contact_us .contact_page {
+  background-color: #dd3333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contact_us .contact_page span {
   color: white;
   writing-mode: vertical-rl;
-  transform: rotate(-180deg)
-}
-/* .contact_us .contact_page i {
   transform: rotate(-180deg);
-} */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 
-.contact_us .wtsp{
+.contact_us .contact_page i {
+  transform: rotate3d(-1, 1, 0, 180deg);
+  margin-bottom: 10px;
+}
+
+.contact_us .wtsp {
   background-color: #26d367;
-  width: 40px;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.contact_us .email{
+
+.contact_us .email {
   background-color: #54595f;
-  width: 40px;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.contact_us i {
+  font-size: 20px;
+}
+
 /* **************************************************************************** */
 
 
